border for products header not fully retrified

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -4,6 +4,7 @@
 \usepackage{graphicx}
 \usepackage[table]{xcolor}
 \usepackage{colortbl}
+\usepackage{hhline}
 \usepackage{helvet}
 \usepackage{tabularx}
 \usepackage{longtable} % ✅ NEW: For tables that break across pages
