service banner tight wisth services

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -388,6 +388,7 @@
 
 %==================== SERVICES TITLE BAR ============================
 
+\needspace{6\baselineskip}
 \vspace{0.9em}
 
 \noindent
@@ -403,6 +404,7 @@
 
 %==================== SERVICES BLOCKS (2 ROWS) ======================
 
+\needspace{8\baselineskip}
 {{{servicesTopRowLatex}}}
 
 % bigger gap between service rows for better readability and clarity
