Services banner dispalying correctly

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -386,30 +386,14 @@
   {{{productsBodyRowsLatex}}}
 \end{longtable}
 
-%==================== SERVICES TITLE BAR ============================
+%==================== SERVICES SECTION ============================
 
-\needspace{6\baselineskip}
-\vspace{0.9em}
-
-\noindent
-\fcolorbox{black}{emred}{%
-  \parbox{\dimexpr\textwidth-2\fboxsep\relax}{%
-    \centering
-    \vspace{0.2em}%
-    {\bfseries\fontsize{1.2em}{1.6em}\selectfont\textcolor{white}{SERVICES}}% ✅ Changed from \footnotesize to \normalsize
-    \vspace{0.2em}%
-  }%
-}%  
-\vspace{1.5em}%
-
-%==================== SERVICES BLOCKS (2 ROWS) ======================
-
-\needspace{8\baselineskip}
+\needspace{2\baselineskip}
 {{{servicesTopRowLatex}}}
 
 % bigger gap between service rows for better readability and clarity
 \vspace{2.5em}
-
+\nopagebreak[4]
 {{{servicesBottomRowLatex}}}
 
 %==================== REFRESH POWER SCRUB TABLE =====================
