refresh power scrub onetime fix

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -414,6 +414,8 @@
 %==================== SERVICE NOTES =================================
 
 \begin{flushleft}
+\setlength{\parindent}{0pt}
+\raggedright
 {{{serviceNotesLatex}}}
 \end{flushleft}
 
