--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -417,6 +417,17 @@
 \vspace{1.5em}   % extra gap before the heading
 {{{refreshSectionLatex}}}
 
+{{#summaryExists}}
+\vspace{1.1em}
+\serviceBigHeading{AGREEMENT SUMMARY}
+\serviceTotalLine{Contract Months:}{\textcolor{totalcolor}{{{summaryContractMonthsDisplay}}}}
+\serviceTotalLine{Trip Charge:}{\textcolor{totalcolor}{{{summaryTripChargeLabel}}}}
+\serviceTotalLine{Parking Charge:}{\textcolor{totalcolor}{{{summaryParkingChargeLabel}}}}
+\serviceTotalLine{Service Total:}{\textcolor{totalcolor}{{{summaryServiceAgreementTotal}}}}
+% \serviceTotalLineWide{Service Agreement Total:}{\textcolor{totalcolor}{{{summaryServiceAgreementTotal}}}}
+\serviceTotalLine{Product Totals:}{\textcolor{totalcolor}{{{summaryProductTotalsLabel}}}}
+{{/summaryExists}}
+
 \vspace{1.5em}
 
 %==================== SERVICE NOTES =================================
