--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -420,6 +420,7 @@
 {{#summaryExists}}
 \vspace{1.1em}
 \serviceBigHeading{AGREEMENT SUMMARY}
+\vspace{0.7em}
 \serviceTotalLine{Contract Months:}{\textcolor{totalcolor}{{{summaryContractMonthsDisplay}}}}
 \serviceTotalLine{Trip Charge:}{\textcolor{totalcolor}{{{summaryTripChargeLabel}}}}
 \serviceTotalLine{Parking Charge:}{\textcolor{totalcolor}{{{summaryParkingChargeLabel}}}}
