global total editng mode is working

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -419,17 +419,15 @@
 
 {{#summaryExists}}
 \vspace{1.1em}
-\serviceBigHeading{AGREEMENT SUMMARY}
-\vspace{0.7em}
+\serviceSection{AGREEMENT SUMMARY}
 \serviceTotalLine{Contract Months:}{\textcolor{totalcolor}{{{summaryContractMonthsDisplay}}}}
 \serviceTotalLine{Trip Charge:}{\textcolor{totalcolor}{{{summaryTripChargeLabel}}}}
 \serviceTotalLine{Parking Charge:}{\textcolor{totalcolor}{{{summaryParkingChargeLabel}}}}
-\serviceTotalLine{Service Total:}{\textcolor{totalcolor}{{{summaryServiceAgreementTotal}}}}
-% \serviceTotalLineWide{Service Agreement Total:}{\textcolor{totalcolor}{{{summaryServiceAgreementTotal}}}}
+\serviceTotalLineWide{Service Agreement Total:}{\textcolor{totalcolor}{{{summaryServiceAgreementTotal}}}}
 \serviceTotalLine{Product Totals:}{\textcolor{totalcolor}{{{summaryProductTotalsLabel}}}}
 {{/summaryExists}}
 
-\vspace{1.5em}
+\vspace{1.1em}
 
 %==================== SERVICE NOTES =================================
 
@@ -442,12 +440,6 @@
 \end{center}
 
 %==================== AGREEMENT PARAGRAPH + SIGNATURES ==============
-
-\vspace{0.8em}
-\noindent\textcolor{emred}{\rule{\textwidth}{0.4pt}}
-
-\vspace{0.6em}
-
 % \small
 % Enviro-Master of \agreementBlank{ {{{agreementEnviroOf}}} }, and Customer hereby
 % agree to extend the current term of the current Service Agreement, executed
