Email sends with attachments correctly

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -421,11 +421,11 @@
 \vspace{2.5em}
 \serviceSection{AGREEMENT SUMMARY}
 \vspace{0.3em}
-\serviceTotalLine{Contract Months:}{\textcolor{totalcolor}{{{summaryContractMonthsDisplay}}}}
-\serviceTotalLine{Trip Charge:}{\textcolor{totalcolor}{{{summaryTripChargeLabel}}}}
-\serviceTotalLine{Parking Charge:}{\textcolor{totalcolor}{{{summaryParkingChargeLabel}}}}
-\serviceTotalLine{Service Totals:}{\textcolor{totalcolor}{{{summaryServiceAgreementTotal}}}}
-\serviceTotalLine{Product Totals:}{\textcolor{totalcolor}{{{summaryProductTotalsLabel}}}}
+\serviceTotalLine{Contract Months:}{\textcolor{totalcolor}{\strut {{{summaryContractMonthsDisplay}}}}}
+\serviceTotalLine{Trip Charge:}{\textcolor{totalcolor}{\strut {{{summaryTripChargeLabel}}}}}
+\serviceTotalLine{Parking Charge:}{\textcolor{totalcolor}{\strut {{{summaryParkingChargeLabel}}}}}
+\serviceTotalLine{Service Totals:}{\textcolor{totalcolor}{\strut {{{summaryServiceAgreementTotal}}}}}
+\serviceTotalLine{Product Totals:}{\textcolor{totalcolor}{\strut {{{summaryProductTotalsLabel}}}}}
 {{/summaryExists}}
 
 \vspace{1.1em}
