saniclean luxury soap is working

--- a/src/templates/customer-header.tex
+++ b/src/templates/customer-header.tex
@@ -421,14 +421,14 @@
 \vspace{2.5em}
 \serviceSection{AGREEMENT SUMMARY}
 \vspace{0.3em}
-\serviceTotalLine{Contract Months:}{\textcolor{totalcolor}{\strut {{{summaryContractMonthsDisplay}}}}}
-\serviceTotalLine{Trip Charge:}{\textcolor{totalcolor}{\strut {{{summaryTripChargeLabel}}}}}
-\serviceTotalLine{Parking Charge:}{\textcolor{totalcolor}{\strut {{{summaryParkingChargeLabel}}}}}
-\serviceTotalLine{Service Totals:}{\textcolor{totalcolor}{\strut {{{summaryServiceAgreementTotal}}}}}
-\serviceTotalLine{Product Totals:}{\textcolor{totalcolor}{\strut {{{summaryProductTotalsLabel}}}}}
+\serviceLine{Contract Months:}{\strut {{{summaryContractMonthsDisplay}}}}
+\serviceLine{Trip Charge:}{\strut {{{summaryTripChargeLabel}}}}
+\serviceLine{Parking Charge:}{\strut {{{summaryParkingChargeLabel}}}}
+\serviceLineWide{Service Agreement Total:}{\strut {{{summaryServiceAgreementTotal}}}}
+\serviceLineWide{Product Totals:}{\strut {{{summaryProductTotalsLabel}}}}
 {{/summaryExists}}
 
-\vspace{1.1em}
+\vspace{0.8em}
 
 %==================== SERVICE NOTES =================================
 
